--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(filepath_manager)
 export(magma_munge_and_setup)
 export(match_cols)
 export(migrate)
+export(parse_ldsc_rg)
 export(prepare_ma)
 export(ranges_to_bed)
 export(sbayes_run)
