Big chunk of updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,11 @@ export(magma_munge_and_setup)
 export(match_cols)
 export(migrate)
 export(parse_ldsc_rg)
+export(parse_magma_geneset)
+export(parse_pldsc)
 export(prepare_ma)
 export(ranges_to_bed)
+export(run_pldsc)
 export(sbayes_run)
 export(slurm_header)
 importFrom(magrittr,"%>%")
